...

val SmartisanTopBarHeight = 50.dp
val SmartisanTopBarShadowHeight = 2.dp

enum class SmartisanTopBarTextButtonStyle {
    Filled,
    Back,
    Toolbar,
}

enum class SmartisanTopBarIconButtonStyle {
    Plain,
    Filled,
...
